# aztro_core

./: .gitignore  Cargo.toml  bump.ps1  language.md
.github/workflows/: release.yml
aztro_horizon/: Cargo.toml
aztro_horizon/src/: main.rs
cosmo_ephemeris/: Cargo.toml
cosmo_ephemeris-sys/: Cargo.toml
cosmo_ephemeris-sys/src/: wrapper.h
cosmo_ephemeris/examples/: coretest.rs  swetest.rs
cosmo_ephemeris/src/: core.rs  lib.rs
release/: libtemporal_ephemeris.d  libtemporal_ephemeris.rlib
release/.fingerprint/aho-corasick-00485363428e0e27/: lib-aho_corasick  lib-aho_corasick.json
release/.fingerprint/approx-045bb0ee929a8123/: lib-approx  lib-approx.json
release/.fingerprint/atty-37714595124fdbd4/: lib-atty  lib-atty.json
release/.fingerprint/autocfg-ad0bff98703cb9e9/: lib-autocfg  lib-autocfg.json
release/.fingerprint/bindgen-56db907ddf69b13a/: build-script-build-script-build  build-script-build-script-build.json
release/.fingerprint/bindgen-be492395f274ffdb/: dep-lib-bindgen  lib-bindgen  lib-bindgen.json
release/.fingerprint/bindgen-f2278d642eb98fba/: run-build-script-build-script-build  run-build-script-build-script-build.json
release/.fingerprint/bitflags-214b99f76c968ff8/: lib-bitflags  lib-bitflags.json
release/.fingerprint/bitflags-31a7e89d85d44583/: lib-bitflags  lib-bitflags.json
release/.fingerprint/cc-bcf041168d181453/: lib-cc  lib-cc.json
release/.fingerprint/cexpr-e82292ff9f17e227/: lib-cexpr  lib-cexpr.json
release/.fingerprint/cfg-if-8767b834a7308c67/: lib-cfg_if  lib-cfg_if.json
release/.fingerprint/clang-sys-cb248c8b855d7b2c/: run-build-script-build-script-build  run-build-script-build-script-build.json
release/.fingerprint/clang-sys-df6044abfbdab114/: dep-lib-clang_sys  lib-clang_sys  lib-clang_sys.json
release/.fingerprint/clang-sys-dfbdffc28b98f5af/: build-script-build-script-build  build-script-build-script-build.json
release/.fingerprint/clap-80d0072ffb309898/: lib-clap  lib-clap.json
release/.fingerprint/either-527f54c41b4bb855/: lib-either  lib-either.json
release/.fingerprint/env_logger-219b4179e04eff84/: lib-env_logger  lib-env_logger.json
src/: ephemeris.rs  lib.rs  main.rs  swisseph.rs  yogas.rs
temporal_ephemeris/: Cargo.toml
temporal_ephemeris-sys/: Cargo.toml
temporal_ephemeris-sys/src/: lib.rs
temporal_ephemeris/examples/: coretest.rs  swetest.rs
temporal_ephemeris/src/: core.rs  lib.rs
(+132 files in other folders)
