[package]
name = "cosmo_ephemeris-sys-auto"
version = "0.1.0"
edition = "2021"
authors = ["incredimo"]
build = "build/build.rs"
license = "AGPL-3.0+"
description = """
Rust bindings for cosmo_ephemeris (the Swiss Ephemeris).

Uses bindgen to generate complete and correct bindings at compile time.
"""


[lib]
name = "cosmo_ephemeris_sys"

[build-dependencies]
bindgen = "0.59.1"
cc = "1.0.70"
