[package]
name = "temporal_ephemeris"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = "0.5.1"
bincode = "1.3.3"
chrono = "0.4.38"
minimo = "0.5.18"
serde = { version = "1.0.209", features = ["derive"] }

[dependencies.temporal_ephemeris-sys-auto]
version = "0.1.0"
path = "../temporal_ephemeris-sys"
